fix depracated method new instance